# leucoform-devweek-2026

./: .gitattributes  .gitignore  AGENT-BRIDGE-FOUNDATION.md  AGENTS.md  ARCHITECTURE.md  AppRun  CHANGELOG.md  COMPANION-SPEC.md  DECISIONS.md  DEMO.md  DEVWEEK-LEUCOFORM-VALIDATION.md  DEVWEEK-SUBMISSION.md  LEUCOFORM.md  LICENSE  Leucoform.iss  Leucoform.spec  MANIFEST.in  NAMING.md  PKG-INFO  PLAN.md  PRIVACY.md  PRODUCT-VERNACULAR.md  PROJECT-MATRIX.md  PROMPT.md  PROTOCOL.md  README.md  REFERENCE-ARCHITECTURE-MAP.md  RELEASE-READINESS-NOTUG.md  RELEASE-READINESS.md  RELEASING.md  RESOURCE-RECEIPTS.md  SECURITY.md  SHA256SUMS.json  SOURCES.txt  STATUS.md  SUBMISSION-PRIVACY.md  THIRD-PARTY-NOTICES.md  THREAT-MODEL.md  __main__.py  activity.py  (+66 more)
