[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notug-protocol"
version = "0.1.0"
description = "Local mutation governance for coding-agent changes"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "NoTUG contributors"}]
keywords = ["git", "change-control", "provenance", "coding-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
desktop = [
  "PySide6>=6.8,<7",
]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
notug = "notug_protocol.cli:main"

[project.gui-scripts]
leucoform = "notug_protocol.desktop.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"notug_protocol.desktop" = ["assets/*.svg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["notug_protocol"]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
